# softserve

./: LICENSE  README.md  dune-project  softserve.opam
lib/: cli.ml  dune  server.ml  utils.ml
test/: dune  utils_tests.ml
